tests/codegen/fail/interface/trait/missing_field_argument.stderr
error[E0080]: evaluation panicked: failed to implement interface `Character` on `ObjA`: field `id`: argument `isPresent` of type `Boolean!` was expected, but not found
  --> fail/interface/trait/missing_field_argument.rs:16:8
   |
16 |     fn id(&self, is_present: bool) -> &str;
   |        ^^ evaluation of `<CharacterValueEnum<ObjA> as juniper::macros::reflect::Field<__S, id>>::call::_` failed here
   |
   = note: this error originates in the macro `$crate::panic::panic_2021` which comes from the expansion of the macro `::juniper::assert_field` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0080]: evaluation panicked: failed to implement interface `Character` on `ObjA`: field `id`: argument `isPresent` of type `Boolean!` was expected, but not found
  --> fail/interface/trait/missing_field_argument.rs:16:8
   |
16 |     fn id(&self, is_present: bool) -> &str;
   |        ^^ evaluation of `<CharacterValueEnum<ObjA> as juniper::macros::reflect::AsyncField<__S, id>>::call::_` failed here
   |
   = note: this error originates in the macro `$crate::panic::panic_2021` which comes from the expansion of the macro `::juniper::assert_field` (in Nightly builds, run with -Z macro-backtrace for more info)
